--- a/gmt01_togglePasswordVisibility/index.html
+++ b/gmt01_togglePasswordVisibility/index.html
@@ -8,6 +8,9 @@
         margin: 1em auto;
         max-width: 40em;
         width: 88%;
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+          Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+          "Segoe UI Symbol";
       }
 
       label {
@@ -17,6 +20,7 @@
 
       input {
         margin-bottom: 1em;
+        font-size: 1em;
       }
 
       [type="checkbox"] {
@@ -54,7 +58,18 @@
     </form>
 
     <script>
-      // Your code goes here...
+      const showPasswordCheckbox = document.querySelector("#show-password");
+      const passwordField = document.querySelector("#password");
+
+      showPasswordCheckbox.addEventListener(
+        "change",
+        function(event) {
+          passwordField.type === "password"
+            ? (passwordField.type = "text")
+            : (passwordField.type = "password");
+        },
+        false
+      );
     </script>
   </body>
 </html>
