added a gomakethings folder and renamed the toggle password visibility html doc

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <h1>Learning JS</h1>
     <h2>Here's some random shit I've built</h2>
     <p>
-      <a href="./gmt01_togglePasswordVisibility/index.html"
+      <a href="./goMakeThings/togglePasswordVisibility/"
         >Toggle password visibility</a
       >
     </p>
