--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <h1>Learning JS</h1>
     <h2>Here's some random shit I've built</h2>
     <p>
-      <a href="./goMakeThings/togglePasswordVisibility/"
+      <a href="./vanillaJS-academy/togglePasswordVisibility/index.html"
         >Toggle password visibility</a
       >
     </p>
