added second assignment and url paths in homepage

--- a/index.html
+++ b/index.html
@@ -21,7 +21,14 @@
     <h1>Learning JS</h1>
     <h2>Here's some random shit I've built</h2>
     <p>
-      <a href="./vanillaJS-academy/togglePasswordVisibility/index.html"
+      <a
+        href="./vanillaJS-academy/01_toggle-password-visibility/togglePasswordVisibility.html"
+        >Toggle password visibility</a
+      >
+    </p>
+    <p>
+      <a
+        href="./vanillaJS-academy/02_password-visibility-multiple-fields/password-visibility-multiple-fields.html"
         >Toggle password visibility</a
       >
     </p>
