updated link name so it wasn't a copy of first assignment's link

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <p>
       <a
         href="./vanillaJS-academy/02_password-visibility-multiple-fields/password-visibility-multiple-fields.html"
-        >Toggle password visibility</a
+        >Toggle password visibility of multiple fields</a
       >
     </p>
   </body>
