removed comment from Array.prototype.slice.call method to improve browser compatability

--- a/vanillaJS-academy/02_password-visibility-multiple-fields/password-visibility-multiple-fields.html
+++ b/vanillaJS-academy/02_password-visibility-multiple-fields/password-visibility-multiple-fields.html
@@ -55,11 +55,8 @@
 
     <script>
       const showPasswordsCheckbox = document.querySelector("#show-passwords");
-      //   const passwordFields = Array.prototype.slice.call(
-      //     document.querySelectorAll("input[type='password']")
-      //   );
-      const passwordFields = document.querySelectorAll(
-        "input[type='password']"
+      const passwordFields = Array.prototype.slice.call(
+        document.querySelectorAll("input[type='password']")
       );
 
       showPasswordsCheckbox.addEventListener(
