added htrid assignment

--- a/index.html
+++ b/index.html
@@ -23,13 +23,17 @@
     <p>
       <a
         href="./vanillaJS-academy/01_toggle-password-visibility/togglePasswordVisibility.html"
-        >Toggle password visibility</a
+        >01. Toggle password visibility</a
       >
     </p>
     <p>
       <a
         href="./vanillaJS-academy/02_password-visibility-multiple-fields/password-visibility-multiple-fields.html"
-        >Toggle password visibility of multiple fields</a
+        >02. Toggle password visibility of multiple fields</a
+      >
+      <a
+        href="./vanillaJS-academy/03_password-visibility-multiple-forms/password-visibility-multiple-forms.html"
+        >03. Toggle Password Visibility in Multiple Forms</a
       >
     </p>
   </body>
