updated with refactored assignment

--- a/vanillaJS-academy/03_password-visibility-multiple-forms/password-visibility-multiple-forms.html
+++ b/vanillaJS-academy/03_password-visibility-multiple-forms/password-visibility-multiple-forms.html
@@ -87,36 +87,32 @@
       let formCount = 0;
 
       const createArrayofPasswordFields = function(elem) {
-        const closestForm = elem.closest("form");
-        const formInputs = Array.prototype.slice.call(closestForm.elements);
-        const formPasswordInputs = [];
-        formInputs.forEach(element => {
-          if (element.type == "password") {
-            formPasswordInputs.push(element);
-          }
-        });
-        arraysOfPasswordFields.push(formPasswordInputs);
+        const form = elem.closest("form");
+        const passwords = Array.prototype.slice.call(
+          form.querySelectorAll('[type="password"]')
+        );
+        arraysOfPasswordFields.push(passwords);
       };
 
       window.addEventListener(
         "click",
         function(event) {
           if (event.target.matches('[type="checkbox"]')) {
+            const toggle = event.target;
             //If the checkbox doesn't have a form "field-index", give it a field-index attribute
-            if (!event.target.hasAttribute("field-index")) {
-              event.target.setAttribute("field-index", formCount);
-              createArrayofPasswordFields(event.target);
+            if (!toggle.hasAttribute("field-index")) {
+              toggle.setAttribute("field-index", formCount);
+              createArrayofPasswordFields(toggle);
               formCount++;
-              console.log(arraysOfPasswordFields);
-              console.log(event.target);
             }
-            arraysOfPasswordFields[
-              event.target.getAttribute("field-index")
-            ].forEach(field => {
-              event.target.checked
-                ? (field.type = "text")
-                : (field.type = "password");
-            }, false);
+            arraysOfPasswordFields[toggle.getAttribute("field-index")].forEach(
+              field => {
+                toggle.checked
+                  ? (field.type = "text")
+                  : (field.type = "password");
+              },
+              false
+            );
           }
         },
         false
