added character counter assignment

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
         href="./vanillaJS-academy/03_password-visibility-multiple-forms/password-visibility-multiple-forms.html"
         >03. Toggle Password Visibility in Multiple Forms</a
       >
+      <a href="./vanillaJS-academy/04_character-count/character-count.html"
+        >04. Text area character counter</a
+      >
     </p>
   </body>
 </html>
