Updated weather app to be a configurable plugin

--- a/index.html
+++ b/index.html
@@ -20,24 +20,49 @@
   <body>
     <h1>Learning JS</h1>
     <h2>Here's some random shit I've built</h2>
-    <p>
-      <a
-        href="./vanillaJS-academy/01_toggle-password-visibility/togglePasswordVisibility.html"
-        >01. Toggle password visibility</a
-      >
-    </p>
-    <p>
-      <a
-        href="./vanillaJS-academy/02_password-visibility-multiple-fields/password-visibility-multiple-fields.html"
-        >02. Toggle password visibility of multiple fields</a
-      >
-      <a
-        href="./vanillaJS-academy/03_password-visibility-multiple-forms/password-visibility-multiple-forms.html"
-        >03. Toggle Password Visibility in Multiple Forms</a
-      >
-      <a href="./vanillaJS-academy/04_character-count/character-count.html"
-        >04. Text area character counter</a
-      >
-    </p>
+
+    <ol>
+      <li>
+        <a
+          href="./vanillaJS-academy/01_toggle-password-visibility/togglePasswordVisibility.html"
+          >Toggle password visibility</a
+        >
+      </li>
+      <li>
+        <a
+          href="./vanillaJS-academy/02_password-visibility-multiple-fields/password-visibility-multiple-fields.html"
+          >Toggle password visibility of multiple fields</a
+        >
+      </li>
+      <li>
+        <a
+          href="./vanillaJS-academy/03_password-visibility-multiple-forms/password-visibility-multiple-forms.html"
+          >Toggle Password Visibility in Multiple Forms</a
+        >
+      </li>
+      <li>
+        <a href="./vanillaJS-academy/04_character-count/character-count.html"
+          >Text area character counter</a
+        >
+      </li>
+      <li>
+        <a href="./vanillaJS-academy/05_nyTimes/index.html"
+          >New York Times article feed</a
+        >
+      </li>
+      <li>
+        <a href="./vanillaJS-academy/06_monsterShuffle/index.html"
+          >Monster shuffle</a
+        >
+      </li>
+      <li>
+        <a href="./vanillaJS-academy/07_table-of-contents/"
+          >Dynamically create a table of contents</a
+        >
+      </li>
+      <li>
+        <a href="./vanillaJS-academy/08_weatherApp/index.html">Weather app</a>
+      </li>
+    </ol>
   </body>
 </html>
