--- a/index.html
+++ b/index.html
@@ -1,68 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
 
-    <style>
-      body {
-        margin: 1em auto;
-        max-width: 40em;
-        width: 88%;
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-          Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
-          "Segoe UI Symbol";
-      }
-    </style>
-  </head>
-  <body>
-    <h1>Learning JS</h1>
-    <h2>Here's some random shit I've built</h2>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Document</title>
 
-    <ol>
-      <li>
-        <a
-          href="./vanillaJS-academy/01_toggle-password-visibility/togglePasswordVisibility.html"
-          >Toggle password visibility</a
-        >
-      </li>
-      <li>
-        <a
-          href="./vanillaJS-academy/02_password-visibility-multiple-fields/password-visibility-multiple-fields.html"
-          >Toggle password visibility of multiple fields</a
-        >
-      </li>
-      <li>
-        <a
-          href="./vanillaJS-academy/03_password-visibility-multiple-forms/password-visibility-multiple-forms.html"
-          >Toggle Password Visibility in Multiple Forms</a
-        >
-      </li>
-      <li>
-        <a href="./vanillaJS-academy/04_character-count/character-count.html"
-          >Text area character counter</a
-        >
-      </li>
-      <li>
-        <a href="./vanillaJS-academy/05_nyTimes/index.html"
-          >New York Times article feed</a
-        >
-      </li>
-      <li>
-        <a href="./vanillaJS-academy/06_monsterShuffle/index.html"
-          >Monster shuffle</a
-        >
-      </li>
-      <li>
-        <a href="./vanillaJS-academy/07_table-of-contents/"
-          >Dynamically create a table of contents</a
-        >
-      </li>
-      <li>
-        <a href="./vanillaJS-academy/08_weatherApp/index.html">Weather app</a>
-      </li>
-    </ol>
-  </body>
+  <style>
+    body {
+      margin: 1em auto;
+      max-width: 40em;
+      width: 88%;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+        Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+        "Segoe UI Symbol";
+    }
+  </style>
+</head>
+
+<body>
+  <h1>Learning JS</h1>
+  <h2>Here's some random shit I've built</h2>
+
+  <ol>
+    <li>
+      <a href="./vanillaJS-academy/01_toggle-password-visibility/togglePasswordVisibility.html">Toggle password
+        visibility</a>
+    </li>
+    <li>
+      <a href="./vanillaJS-academy/02_password-visibility-multiple-fields/password-visibility-multiple-fields.html">Toggle
+        password visibility of multiple fields</a>
+    </li>
+    <li>
+      <a href="./vanillaJS-academy/03_password-visibility-multiple-forms/password-visibility-multiple-forms.html">Toggle
+        Password Visibility in Multiple Forms</a>
+    </li>
+    <li>
+      <a href="./vanillaJS-academy/04_character-count/character-count.html">Text area character counter</a>
+    </li>
+    <li>
+      <a href="./vanillaJS-academy/05_nyTimes/index.html">New York Times article feed</a>
+    </li>
+    <li>
+      <a href="./vanillaJS-academy/06_monsterShuffle/index.html">Monster shuffle</a>
+    </li>
+    <li>
+      <a href="./vanillaJS-academy/07_table-of-contents/">Dynamically create a table of contents</a>
+    </li>
+    <li>
+      <a href="./vanillaJS-academy/08_weatherApp/index.html">Weather app</a>
+    </li>
+    <li>
+      <a href="./vanillaJS-academy/09_helperLibrary/index.html">Helper Library</a>
+    </li>
+    <li>
+      <a href="./vanillaJS-academy/10_helperLibraryWithConstructor/index.html">Helper Library with Constructor</a>
+    </li>
+    <li>
+      <a href="./vanillaJS-academy/11_autosavingFormData/index.html">Saving form field data to local storage</a>
+    </li>
+  </ol>
+</body>
+
 </html>
