--- a/vanillaJS-academy/11_storingFormData_oneFieldOneItem/index.html
+++ b/vanillaJS-academy/11_storingFormData_oneFieldOneItem/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>Form Autosave</title>
-
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
+    <title>Document</title>
   </head>
   <body>
-    <h1>Form Autosave</h1>
-
     <form class="save-me" id="save-me">
       <label for="name">Name</label>
       <input type="text" name="name" id="name" />
@@ -25,7 +25,6 @@
         <button type="submit">Submit</button>
       </p>
     </form>
-
-    <script src="app.js"></script>
+    <script src="./app.js"></script>
   </body>
 </html>
