Upload new projects

--- a/index.html
+++ b/index.html
@@ -106,6 +106,17 @@
           fails.</a
         >
       </li>
+      <li>
+        <a href="./vanillaJS-academy/19_countdownTimer_reactive/index.html"
+          >A simple timer using reactive data</a
+        >
+      </li>
+      <li>
+        <a href="./vanillaJS-academy/20_toDoApp/index.html"
+          >A simple to do list using Reef, a lightweight library for creating
+          reactive, state-based components and UI.</a
+        >
+      </li>
     </ol>
   </body>
 </html>
