added multi-list to home page

--- a/index.html
+++ b/index.html
@@ -117,6 +117,12 @@
           reactive, state-based components and UI.</a
         >
       </li>
+      <li>
+        <a href="./vanillaJS-academy/21_toDoApp1.0/"
+          >A simple multi-list to do app using Reef, a lightweight library for
+          creating reactive, state-based components and UI.</a
+        >
+      </li>
     </ol>
   </body>
 </html>
