add option 4 to wuTang

--- a/wuTang/pairDetails/index.html
+++ b/wuTang/pairDetails/index.html
@@ -94,9 +94,24 @@
           </div>
         </div>
         <!-- End of header-->
+        <div class="compareStats">
+          <div>
+            <label for="">Z-Score</label>
+            <p>3.05</p>
+          </div>
+          <div>
+            <label for="">Similarity</label>
+            <p>0.89</p>
+          </div>
+          <div>
+            <label for="">Reversion</label>
+            <p>22bp</p>
+          </div>
+        </div>
         <div class="graphs">
           <img src="./img/graphs.png" alt="graphs" />
         </div>
+
         <ol>
           <li>ISIN <span class="positive">YES</span></li>
           <li>Issuer name <span class="positive">YES</span></li>
@@ -176,6 +191,20 @@
           </div>
         </div>
         <!-- End of header -->
+        <div class="compareStats">
+          <div>
+            <label for="">Z-Score</label>
+            <p>3.05</p>
+          </div>
+          <div>
+            <label for="">Similarity</label>
+            <p>0.89</p>
+          </div>
+          <div>
+            <label for="">Reversion</label>
+            <p>22bp</p>
+          </div>
+        </div>
         <div class="graphs">
           <img src="./img/graphs.png" alt="graphs" />
         </div>
@@ -260,6 +289,113 @@
             <h2 class="additionalInfo left">B</h2>
             <h2 class="additionalInfo left">USD</h2>
             <h2 class="additionalInfo left">3 years, 8 days</h2>
+          </div>
+        </div>
+        <div class="compareStats">
+          <div>
+            <label for="">Z-Score</label>
+            <p>3.05</p>
+          </div>
+          <div>
+            <label for="">Similarity</label>
+            <p>0.89</p>
+          </div>
+          <div>
+            <label for="">Reversion</label>
+            <p>22bp</p>
+          </div>
+        </div>
+        <!-- End of header -->
+        <div class="graphs">
+          <img src="./img/graphs.png" alt="graphs" />
+        </div>
+        <ol>
+          <li>ISIN <span class="positive">YES</span></li>
+          <li>Issuer name <span class="positive">YES</span></li>
+          <li>Ticker <span class="positive">YES</span></li>
+          <li>Country <span class="positive">YES</span></li>
+          <li>Stock Group <span class="negative">NO</span></li>
+          <li>Coupon rate <span class="positive">YES</span></li>
+          <li>Maturity date <span class="positive">YES</span></li>
+          <li>Type/Sector <span class="positive">YES</span></li>
+          <li>Residual duration <span class="positive">YES</span></li>
+          <li>Currency <span class="positive">Yes</span></li>
+          <li>
+            Z-score <span class="negative">NO</span> (only calculable from
+            graph)
+          </li>
+          <li>Similarity <span class="negative">NO</span></li>
+          <li>Reversion <span class="negative">NO</span></li>
+        </ol>
+      </div>
+    </div>
+
+    <div class="content option3 option4">
+      <div class="artboardName">
+        <h2>Option 4</h2>
+      </div>
+      <nav></nav>
+      <div class="main">
+        <div class="header">
+          <div class="buySide">
+            <div class="bondName">
+              <h4>Guangzhou R&F Properties</h4>
+              <h1 class="ticker">GZRFPR 5.875% 13/02/2023</h1>
+              <h2 class="additionalInfo" style="padding: 0; font-weight: bold">
+                XS1720054383
+              </h2>
+            </div>
+            <div class="" style="height: 8px; margin-left: 12px;"></div>
+            <h2 class="additionalInfo">
+              China · Financials · BB- · USD
+            </h2>
+          </div>
+          <div class="bookmark">
+            <div class="bookmarkInfo active" data-cy="bookmark">
+              <div>
+                <div class="icon">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                  >
+                    <g fill="#F3AE4B">
+                      <path
+                        d="M17 3H7c-1.1 0-1.99.9-1.99 2L5 21l7-3 7 3V5c0-1.1-.9-2-2-2z"
+                      ></path>
+                    </g>
+                  </svg>
+                </div>
+                <h3 class="_18zb6k3">SH</h3>
+                <h4 class="_1msjved">a day ago</h4>
+              </div>
+            </div>
+          </div>
+          <div class="sellSide">
+            <div class="bondName">
+              <h4>Zhenro Properties Group Limited</h4>
+              <h1 class="ticker">ZHPRHK 9.150% 08/03/2022</h1>
+              <h2 class="additionalInfo" style="padding: 0; font-weight: bold">
+                XS1960071303
+              </h2>
+            </div>
+            <div class="" style="height: 8px; margin-right: 12px"></div>
+            <h2 class="additionalInfo">China · Financials · B · USD</h2>
+          </div>
+        </div>
+        <div class="compareStats">
+          <div>
+            <label for="">Z-Score</label>
+            <p>3.05</p>
+          </div>
+          <div>
+            <label for="">Similarity</label>
+            <p>0.89</p>
+          </div>
+          <div>
+            <label for="">Reversion</label>
+            <p>22bp</p>
           </div>
         </div>
         <!-- End of header -->
