updated option 1 and 4

--- a/wuTang/pairDetails/index.html
+++ b/wuTang/pairDetails/index.html
@@ -58,7 +58,7 @@
               <h1 class="ticker">GZRFPR 5 7/8 13/02/2023</h1>
             </div>
             <h2 class="additionalInfo">
-              China · Financials · BB- · USD · XS1720054383
+              China · Financials · BB- · 3-5 years · XS1720054383
             </h2>
           </div>
           <div class="bookmark">
@@ -89,7 +89,7 @@
               <h1 class="ticker">ZHPRHK 9 3/20 08/03/2022</h1>
             </div>
             <h2 class="additionalInfo">
-              China · Financials · B · USD · XS1960071303
+              China · Financials · B · 1-2 years · XS1960071303
             </h2>
           </div>
         </div>
@@ -152,7 +152,7 @@
             <h2 class="additionalInfo">Financials</h2>
             <h2 class="additionalInfo">BB-</h2>
             <h2 class="additionalInfo">USD</h2>
-            <h2 class="additionalInfo left">3 years, 8 days</h2>
+            <h2 class="additionalInfo left">3-5 years</h2>
             <h2 class="additionalInfo">XS1720054383</h2>
           </div>
           <div class="bookmark">
@@ -186,7 +186,7 @@
             <h2 class="additionalInfo">Financials</h2>
             <h2 class="additionalInfo">B</h2>
             <h2 class="additionalInfo">USD</h2>
-            <h2 class="additionalInfo">2 years, 43 days</h2>
+            <h2 class="additionalInfo">1-2 years</h2>
             <h2 class="additionalInfo">XS1960071303</h2>
           </div>
         </div>
@@ -342,12 +342,12 @@
               <h4>Guangzhou R&F Properties</h4>
               <h1 class="ticker">GZRFPR 5.875% 13/02/2023</h1>
               <h2 class="additionalInfo" style="padding: 0; font-weight: bold">
-                XS1720054383
+                XS1720054383 (USD)
               </h2>
             </div>
             <div class="" style="height: 8px; margin-left: 12px;"></div>
             <h2 class="additionalInfo">
-              China · Financials · BB- · USD
+              China · Financials · BB- · 3-5 years
             </h2>
           </div>
           <div class="bookmark">
@@ -377,11 +377,11 @@
               <h4>Zhenro Properties Group Limited</h4>
               <h1 class="ticker">ZHPRHK 9.150% 08/03/2022</h1>
               <h2 class="additionalInfo" style="padding: 0; font-weight: bold">
-                XS1960071303
+                XS1960071303 (USD)
               </h2>
             </div>
             <div class="" style="height: 8px; margin-right: 12px"></div>
-            <h2 class="additionalInfo">China · Financials · B · USD</h2>
+            <h2 class="additionalInfo">China · Financials · B · 1-2 years</h2>
           </div>
         </div>
         <div class="compareStats">
