--- a/wuTang/pairDetails/index.html
+++ b/wuTang/pairDetails/index.html
@@ -10,8 +10,8 @@
   <body>
     <div class="userStory">
       <h2>
-        I want to see more information about each bond when analysing a bond
-        pair.
+        "I want to see more information about each bond when analysing a bond
+        pair."
       </h2>
       <p>
         Users, when analysing a bonds pair, aren't able to see the relevant
