--- a/wuTang/pairDetails/index.html
+++ b/wuTang/pairDetails/index.html
@@ -422,11 +422,11 @@
           <li>Residual duration <span class="positive">YES</span></li>
           <li>Currency <span class="positive">Yes</span></li>
           <li>
-            Z-score <span class="negative">NO</span> (only calculable from
+            Z-score <span class="positive">YES</span> (only calculable from
             graph)
           </li>
-          <li>Similarity <span class="negative">NO</span></li>
-          <li>Reversion <span class="negative">NO</span></li>
+          <li>Similarity <span class="positive">YES</span></li>
+          <li>Reversion <span class="positive">YES</span></li>
         </ol>
       </div>
     </div>
