updated with responsive design

--- a/wuTang/pairDetails/index.html
+++ b/wuTang/pairDetails/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="userStory">
+    <!-- <div class="userStory">
       <h2>
         I want to see more information about each bond when analysing a bond
         pair.
@@ -18,7 +18,11 @@
         attributes for each bond. This makes making comparisons more difficult.
       </p>
       <p><strong>Current details provided:</strong></p>
-      <img src="./img/Screenshot 2020-02-06 at 10.25.38.png" alt="" />
+      <img
+        src="./img/Screenshot 2020-02-06 at 10.25.38.png"
+        alt=""
+        style="margin-left: 280px"
+      />
       <p>
         <strong>Current bonds attributes visible:</strong>
       </p>
@@ -43,6 +47,125 @@
         <li>Similarity <span class="negative">NO</span></li>
         <li>Reversion <span class="negative">NO</span></li>
       </ol>
+    </div> -->
+
+    <div class="content option4">
+      <div class="artboardName">
+        <h2>Option 4 (winner)</h2>
+      </div>
+      <nav>
+        <ul>
+          <li>
+            <div class="icon"></div>
+            <label>Dashboard</label>
+          </li>
+          <li class="active">
+            <div class="icon"></div>
+            <label>Trade ideas</label>
+          </li>
+          <li>
+            <div class="icon"></div>
+            <label>Bookmarks</label>
+          </li>
+        </ul>
+      </nav>
+      <div class="main">
+        <div class="header">
+          <div class="buySide">
+            <div class="bondName">
+              <h4>Guangzhou R&F Properties</h4>
+              <h1 class="ticker">
+                GZRFPR <span style="white-space: nowrap">5 7/8</span> 13/02/2023
+              </h1>
+              <h2 class="additionalInfo" style="padding: 0; font-weight: bold">
+                XS1720054383 (USD)
+              </h2>
+            </div>
+            <div class="" style="height: 8px; margin-left: 12px;"></div>
+            <div class="additionalInfo" id="additionalLeft">
+              <div class="box">China</div>
+              <div class="box">Financials</div>
+              <div class="box">BB-</div>
+              <div class="box">3-5 years</div>
+            </div>
+          </div>
+          <div class="bookmark" id="bookmark">
+            <div class="bookmarkInfo active" data-cy="bookmark">
+              <div>
+                <div class="icon">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                  >
+                    <g fill="#F3AE4B">
+                      <path
+                        d="M17 3H7c-1.1 0-1.99.9-1.99 2L5 21l7-3 7 3V5c0-1.1-.9-2-2-2z"
+                      ></path>
+                    </g>
+                  </svg>
+                </div>
+                <h3 class="_18zb6k3">SH</h3>
+                <h4 class="_1msjved">a day ago</h4>
+              </div>
+            </div>
+          </div>
+          <div class="sellSide">
+            <div class="bondName">
+              <h4>Zhenro Properties Group Limited</h4>
+              <h1 class="ticker">
+                ZHPRHK
+                <span style="white-space: nowrap">9 3/20</span> 08/03/2022
+              </h1>
+              <h2 class="additionalInfo" style="padding: 0; font-weight: bold">
+                XS1960071303 (USD)
+              </h2>
+            </div>
+            <div class="" style="height: 8px; margin-right: 12px"></div>
+            <div class="additionalInfo" id="additionalRight">
+              <div class="box">China</div>
+              <div class="box">Financials</div>
+              <div class="box">B</div>
+              <div class="box">1-2 years</div>
+            </div>
+          </div>
+        </div>
+        <div id="compareStuff" class="compareStats">
+          <div>
+            <label for="">Z-Score</label>
+            <p>3.05</p>
+          </div>
+          <div>
+            <label for="">Similarity</label>
+            <p>0.89</p>
+          </div>
+          <div>
+            <label for="">Reversion</label>
+            <p>22bp</p>
+          </div>
+        </div>
+        <!-- End of header -->
+        <div class="graphs">
+          <img src="./img/graphs.png" alt="graphs" />
+        </div>
+        <ol>
+          <li>ISIN <span class="positive">YES</span></li>
+          <li>Issuer name <span class="positive">YES</span></li>
+          <li>Ticker <span class="positive">YES</span></li>
+          <li>Country <span class="positive">YES</span></li>
+          <li>Stock Group <span class="negative">NO</span></li>
+          <li>Coupon rate <span class="positive">YES</span></li>
+          <li>Maturity date <span class="positive">YES</span></li>
+          <li>Type/Sector <span class="positive">YES</span></li>
+          <li>Residual duration <span class="positive">YES</span></li>
+          <li>Currency <span class="positive">Yes</span></li>
+          <li>Z-score <span class="positive">YES</span></li>
+          <li>Similarity <span class="positive">YES</span></li>
+          <li>Reversion <span class="positive">YES</span></li>
+        </ol>
+      </div>
+      <div class="sidebar"></div>
     </div>
 
     <div class="content option1">
@@ -330,107 +453,6 @@
       </div>
     </div>
 
-    <div class="content option3 option4">
-      <div class="artboardName">
-        <h2>Option 4</h2>
-      </div>
-      <nav></nav>
-      <div class="main">
-        <div class="header">
-          <div class="buySide">
-            <div class="bondName">
-              <h4>Guangzhou R&F Properties</h4>
-              <h1 class="ticker">GZRFPR 5.875% 13/02/2023</h1>
-              <h2 class="additionalInfo" style="padding: 0; font-weight: bold">
-                XS1720054383 (USD)
-              </h2>
-            </div>
-            <div class="" style="height: 8px; margin-left: 12px;"></div>
-            <div class="additionalInfo" id="additionalLeft">
-              <div class="box">China</div>
-              <div class="box">Financials</div>
-              <div class="box">BB-</div>
-              <div class="box">3-5 years</div>
-            </div>
-          </div>
-          <div class="bookmark" id="bookmark">
-            <div class="bookmarkInfo active" data-cy="bookmark">
-              <div>
-                <div class="icon">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                  >
-                    <g fill="#F3AE4B">
-                      <path
-                        d="M17 3H7c-1.1 0-1.99.9-1.99 2L5 21l7-3 7 3V5c0-1.1-.9-2-2-2z"
-                      ></path>
-                    </g>
-                  </svg>
-                </div>
-                <h3 class="_18zb6k3">SH</h3>
-                <h4 class="_1msjved">a day ago</h4>
-              </div>
-            </div>
-          </div>
-          <div class="sellSide">
-            <div class="bondName">
-              <h4>Zhenro Properties Group Limited</h4>
-              <h1 class="ticker">ZHPRHK 9.150% 08/03/2022</h1>
-              <h2 class="additionalInfo" style="padding: 0; font-weight: bold">
-                XS1960071303 (USD)
-              </h2>
-            </div>
-            <div class="" style="height: 8px; margin-right: 12px"></div>
-            <div class="additionalInfo" id="additionalRight">
-              <div class="box">China</div>
-              <div class="box">Financials</div>
-              <div class="box">B</div>
-              <div class="box">1-2 years</div>
-            </div>
-          </div>
-        </div>
-        <div id="compareStuff" class="compareStats">
-          <div>
-            <label for="">Z-Score</label>
-            <p>3.05</p>
-          </div>
-          <div>
-            <label for="">Similarity</label>
-            <p>0.89</p>
-          </div>
-          <div>
-            <label for="">Reversion</label>
-            <p>22bp</p>
-          </div>
-        </div>
-        <!-- End of header -->
-        <div class="graphs">
-          <img src="./img/graphs.png" alt="graphs" />
-        </div>
-        <ol>
-          <li>ISIN <span class="positive">YES</span></li>
-          <li>Issuer name <span class="positive">YES</span></li>
-          <li>Ticker <span class="positive">YES</span></li>
-          <li>Country <span class="positive">YES</span></li>
-          <li>Stock Group <span class="negative">NO</span></li>
-          <li>Coupon rate <span class="positive">YES</span></li>
-          <li>Maturity date <span class="positive">YES</span></li>
-          <li>Type/Sector <span class="positive">YES</span></li>
-          <li>Residual duration <span class="positive">YES</span></li>
-          <li>Currency <span class="positive">Yes</span></li>
-          <li>
-            Z-score <span class="positive">YES</span> (only calculable from
-            graph)
-          </li>
-          <li>Similarity <span class="positive">YES</span></li>
-          <li>Reversion <span class="positive">YES</span></li>
-        </ol>
-      </div>
-    </div>
-
     <div class="content option3 option4 option5">
       <div class="artboardName">
         <h2>Option 5</h2>
@@ -523,7 +545,7 @@
         </ol>
       </div>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.2/TweenMax.min.js"></script>
+
     <script src="./js/app.js"></script>
   </body>
 </html>
